# paintress

./: Cargo.toml  README.md  paintress.toml  tide.py
src/: config.rs  discovery.rs  error.rs  image.rs  main.rs  ota.rs  palette.rs  transport.rs
src/backend/: esp32.rs  mod.rs
src/layout/: freeform.rs  grid.rs  mod.rs
web_server/: web_server.ino
