[package]
name = "paintress"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
image = "0.25"
thiserror = "2"
mdns-sd = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
